--- a/kiss_icp_ros/config/kiss_icp_params.yaml
+++ b/kiss_icp_ros/config/kiss_icp_params.yaml
@@ -1,104 +1,61 @@
-# KISS-ICP Parameters Configuration
-# Based on the original KISS-ICP paper implementation
+# kiss_icp_ros/config/kiss_icp_params.yaml
 
-kiss_icp:
+kiss_icp_odometry:
   ros__parameters:
-    # Core Algorithm Parameters
-    # LiDAR sensor maximum range in meters
-    max_range: 80.0
-
-    # Minimum deviation threshold for adaptive threshold calculation (meters)
-    min_deviation: 0.1
-
-    # Base voxel size (will be scaled by factors α and β)
-    # If set to 0.0, will be automatically set to 0.01 * max_range
-    voxel_size: 0.0
-
-    # Maximum ICP iterations
-    max_iterations: 50
-
-    # ICP convergence threshold
-    convergence_threshold: 0.0001
-
-    # Downsampling factors
-    # α factor for map merging (0.5 in paper)
-    alpha_factor: 0.5
-
-    # β factor for ICP registration (1.5 in paper)
-    beta_factor: 1.5
-
-    # Local map parameters
-    max_points_per_voxel: 20
-
-    # ROS Topic Configuration
-    cloud_topic: "/velodyne_points"
-
-    # Frame IDs
+    # Frame Configuration
     base_frame: "base_link"
     odom_frame: "odom"
-    map_frame: "map"
+    lidar_frame: "velodyne"
 
-    # Publishing Options
-    publish_tf: true
-    publish_map: true
-    publish_deskewed: false # For debugging
+    # Algorithm Parameters
+    max_range: 100.0              # Maximum LiDAR range (meters)
+    min_range: 1.0                # Minimum LiDAR range (meters)
+    scan_duration: 0.1            # Expected scan duration (seconds)
+    voxel_size: 0.5               # Voxel grid size for downsampling (meters)
 
-    # Publishing rates
-    map_publish_rate: 1.0 # Hz
+    # ICP Parameters
+    max_correspondences: 5000     # Maximum number of correspondences
+    correspondence_threshold: 1.0  # Initial correspondence distance threshold
+    max_icp_iterations: 50        # Maximum ICP iterations
+    convergence_threshold: 0.001  # ICP convergence threshold
 
-    # Debug and Logging
-    debug_mode: false
-    log_level: "info" # debug, info, warn, error
+    # Adaptive Threshold Parameters
+    use_adaptive_threshold: true  # Enable adaptive threshold
+    initial_threshold: 2.0        # Initial threshold value
+    min_threshold: 0.5           # Minimum threshold value
+    max_threshold: 5.0           # Maximum threshold value
 
-    # Performance tuning
-    use_parallel_processing: true
-    num_threads: 0 # 0 for auto-detect
+    # Motion Model Parameters
+    use_constant_velocity: true   # Enable constant velocity model
+    motion_compensation: true     # Enable motion compensation
 
-# KITTI Player Parameters
+    # Publishing Parameters
+    publish_tf: true              # Publish TF transforms
+    publish_path: true            # Publish trajectory path
+    publish_local_map: true       # Publish local map
+    publish_current_scan: true    # Publish current scan
+    publish_deskewed_scan: false  # Publish deskewed scan
+
+    # Path Parameters
+    path_max_size: 1000          # Maximum number of poses in path
+
+    # Quality Control
+    min_motion_threshold: 0.01   # Minimum motion for processing (meters)
+    max_angular_velocity: 2.0    # Maximum angular velocity (rad/s)
+    max_linear_velocity: 10.0    # Maximum linear velocity (m/s)
+
 kitti_player:
   ros__parameters:
-    # Dataset path - must be set via launch argument
+    # Dataset Configuration
     dataset_path: "/path/to/kitti/dataset"
-
-    # Sequence to play
     sequence: "00"
+    
+    # Playback Configuration
+    publish_rate: 10.0           # Publishing rate (Hz)
+    frame_id: "velodyne"         # Point cloud frame ID
+    loop_playback: true          # Enable loop playback
+    auto_start: false            # Auto start playback
 
-    # Playback rate in Hz
-    publish_rate: 10.0
-
-    # Loop playback when reaching end
-    loop_playback: false
-
-    # Start playback automatically
-    auto_start: true
-
-    # Frame ID for published point clouds
-    frame_id: "velodyne"
-
-    # Topic to publish point clouds
-    cloud_topic: "/velodyne_points"
-
-# Evaluation Parameters
-evaluation:
-  ros__parameters:
-    # Evaluation frequency
-    evaluation_rate: 1.0 # Hz
-
-    # Results saving
-    save_results: true
-    results_directory: "/tmp/kiss_icp_results"
-
-    # Alignment parameters for trajectory evaluation
-    alignment_length: 100.0 # meters
-
-    # Distance threshold for RPE calculation
-    rpe_distance_threshold: 100.0 # meters
-
-    # Output formats
-    save_trajectory_kitti: true
-    save_trajectory_tum: true
-    save_plots: true
-
-    # Ground truth source
-    ground_truth_topic: "/ground_truth/pose"
-    use_kitti_ground_truth: true
+    # Data Processing
+    skip_frames: 0               # Number of frames to skip
+    max_points_per_scan: 150000  # Maximum points per scan
